--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.dmdev</groupId>
         <artifactId>first-maven</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>web</artifactId>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.dmdev</groupId>
             <artifactId>service</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
