--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.dmdev</groupId>
     <artifactId>first-maven</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
 
     <name>first-maven</name>
@@ -21,7 +21,7 @@
         <connection>scm:git:git@github.com:LighterPro/first-maven.git</connection>
         <developerConnection>scm:git:git@github.com:LighterPro/first-maven.git</developerConnection>
         <url>https://github.com/LighterPro/first-maven</url>
-      <tag>HEAD</tag>
+      <tag>first-maven-1.0.1</tag>
   </scm>
 
     <distributionManagement>
