--- a/database/pom.xml
+++ b/database/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.dmdev</groupId>
         <artifactId>first-maven</artifactId>
-        <version>1.0.2</version>
+        <version>1.0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>database</artifactId>
